2012-02-18  Kaz Kylheku  <kaz@kylheku.com>

	Allow braced output variables to actually be arbitrary substitutions.

	* eval.c (subst_vars): Treat the variable as an arbitrary
	expression rather than just a symbol.

	* match.c (subst_vars): Likewise.

	* parser.y (o_var): Further simplification. The first item in
	an output var is an expr and not an IDENT.

	* txr.1: Updated.

	* txr.vim: Likewise.

2012-02-18  Kaz Kylheku  <kaz@kylheku.com>

	* parser.y (o_var): Remove productions from grammar by using exprs_opt.

2012-02-17  Kaz Kylheku  <kaz@kylheku.com>

	Reimplementation of how TXR decides whether to dump bindings
	or not. This is now done right inside the standard output stream.

	* match.c (output_produced): Variable removed.
	(complex_open): Assignment to output_produced removed.

	* stream.c (output_produced): New global variable.
	(stdio_put_string, stdio_put_char): Set output_produced
	to t if the target of the output is stdout.

	* stream.h (output_produced): Declared.

	* txr.h (output_produced): Declaration removed.

2012-02-17  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (dwim_loc): 2012-02-13 fix didn't do it. 
	Here is a simpler way. We can let nil be treated as a list with a
	simple goto. This solves all cases.

2012-02-16  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): Register match-fun.

	* match.c (v_do): Store match context.
	(match_fun): New function.

	* match.h (match_fun): Declared.

	* stream.c (streamp): New function.

	* stream.h (streamp): Declared.

	* txr.1: Stub section for match-fun.

	* txr.vim: Highlight match-fun.

2012-02-16  Kaz Kylheku  <kaz@kylheku.com>

	* match.c (match_funcall): Function renamed to match_filter.

	* match.h (match_funcall): Declaration updated.

	* filter.c (get_filter): Updated.

2012-02-16  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (op_catch): Treat the nil exception object as an empty
	list, and not the atom nil.

	* match.c (v_try): Do not transform an atomic exception x into